# firefly-iii-rs

./: Cargo.toml
src/: accounts.rs  currencies.rs  data.rs  lib.rs  transactions.rs
