[package]
name = "firefly-iii"
version = "0.1.0+firefly-iii-1.5.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.24.1", features = ["full"] }
reqwest = { version = "0.11.13", features = ["json", "brotli", "gzip", "deflate"] }
serde_json = "1.0.91"
async-trait = "0.1.61"
serde = { version = "1.0.152", features = ["derive"] }
derive_builder = "0.12.0"
